Added Vue and Axios

--- a/Payroll.MVC/Views/Home/Index.cshtml
+++ b/Payroll.MVC/Views/Home/Index.cshtml
@@ -3,3 +3,10 @@
 }
 
 <h1>Tax Calculator</h1>
+<div id="taxCalculator">
+    <ol>
+        <li v-for="postalCode in postalCodes">
+            {{ postalCode.postalCode }}
+        </li>
+    </ol>
+</div>
