--- a/Payroll.MVC/Views/Shared/_Layout.cshtml
+++ b/Payroll.MVC/Views/Shared/_Layout.cshtml
@@ -16,6 +16,8 @@
     </div>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/axios/axios.min.js"></script>
+    <script src="~/lib/vue/vue.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
