Fix Column header spacing

--- a/Payroll.MVC/Views/Home/Index.cshtml
+++ b/Payroll.MVC/Views/Home/Index.cshtml
@@ -56,11 +56,11 @@
         <div class="row" v-if="viewHistory">
             <table class="table table-striped">
                 <tr>
-                    <th>AnnualIncome</th>
-                    <th>PostalCode</th>
-                    <th>CalculatedTax</th>
-                    <th>CalculationType</th>
-                    <th>CreatedOnDateString</th>
+                    <th>Annual Income</th>
+                    <th>Postal Code</th>
+                    <th>Calculated Tax</th>
+                    <th>Calculation Type</th>
+                    <th>Created On</th>
                 </tr>
                 <tr v-for="history in transactionHistory">
                     <td> {{history.annualIncome}}</td>
